--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1> Golang api for User authentication </h1>
+    <h3>Method: GET, Path: / </h3>
+    <code>
+        Response:This is manupanands testing api...
+    </code>
+        <h3>Method: GET, Path: /health </h3>
+    <code>
+         Response: Health is ok..
+    </code>
 </body>
 </html>
