--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test public server</title>
+    <style>
+        body {background-color: black;}
+        h1 {color: blanchedalmond;}
+        h3 {color: blanchedalmond;}
+        code {color: blanchedalmond;}
+    </style>
 </head>
 <body>
     <h1> Golang api for User authentication </h1>
